# automata-new

./: .gitignore  CMakeLists.txt  README.md  cli_test.txt  debug_output.txt  debug_tta_issue.py  regex_output.txt  test_dna_output.txt  test_output.txt  test_pattern.js  test_pattern.py  test_pda_output.txt  test_regex.py  test_regex_comprehensive.py  test_regex_output.txt  test_results.txt  test_viz_output.txt
docs/: DOCUMENTATION.md  TEST_CASES.md  cfg_to_pda_algorithm.dot
include/api/: server.hpp
include/automata/: common.hpp  dfa.hpp  json_serializer.hpp  nfa.hpp  pda.hpp  regex_parser.hpp  state.hpp  transition.hpp
include/bio/: approximate_matcher.hpp  sequence.hpp
src/: api_server.cpp  approximate_matcher.cpp  dfa.cpp  json_serializer.cpp  main.cpp  nfa.cpp  pda.cpp  regex_parser.cpp  sequence.cpp  state.cpp  transition.cpp
vite/automata/: build_output.txt  index.html  package-lock.json  package.json
vite/automata/src/: App.tsx  index.css  main.tsx
vite/automata/src/components/: CFGToPDAViz.tsx  Header.tsx  HelpModal.tsx  InputPanel.tsx  MatchSimulator.tsx  NFAToDFAViz.tsx  RNAPanel.tsx  ResultsPanel.tsx  SequenceViewer.tsx  XMLPanel.tsx
vite/automata/src/utils/: apiService.ts  dnaUtils.ts  pdaUtils.ts  regexParser.ts
